# zix_understandability-index

./: 01_create_cefr_data.ipynb  02_scrape_administrative_texts.ipynb  03_create_dataset.ipynb  05_use_zix.ipynb  README.md  pyproject.toml  requirements.txt  utils_nlp.py  utils_prompts.py
_input/: cefr_synthetic.parq  legal.parq  rrbs.parq  zh_news.parq  zix_dataset.parq
_input/_synthetic-data/: gemma2it9b_situations.parq  gemma2it9b_swiss.parq  gemma2it9b_topics.parq  gpt4o-mini_situations.parq  gpt4o-mini_swiss.parq  gpt4o-mini_topics.parq  gpt4o_situations.parq  gpt4o_swiss.parq  gpt4o_topics.parq  haiku_situations.parq  haiku_swiss.parq  haiku_topics.parq  phi34kit_situations.parq  phi34kit_swiss.parq  phi34kit_topics.parq  sonnet_situations.parq  sonnet_swiss.parq  sonnet_topics.parq
_tests/: test_understandability.py
zix/: __init__.py  understandability.py
