[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zix"
version = "0.1"
description = 'A libary to calculate an understandability score for German texts.'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

authors = [
  { name = "Statistisches Amt, Kanton Zürich, Team Data", email = "datashop@statistik.zh.ch" },
  { name = "Patrick Arnecke" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "spacy~=3.7.5",
  "pandas~=2.2.2",
  "pyarrow~=17.0.0",
  "jupyter~=1.0.0",
  "ipywidgets~=8.1.3",
  "ipykernel~=6.29.5",
  "numpy~=1.26.4",
  "beautifulsoup4~=4.12.3",
  "requests~=2.32.3",
  "lxml~=5.2.2",
  "python-dotenv~=1.0.1",
  "textdescriptives~=2.8.2",
  "scikit-learn~=1.5.1",
  "matplotlib~=3.9.1",
  "seaborn~=0.13.2",
  "pandarallel~=1.6.5",
  "tqdm~=4.66.4",
  "openai~=1.42.0",
  "anthropic~=0.34.1",
  "pytest~=8.3.2",
]

[project.urls]
repository = "https://github.com/machinelearningZH/zix_understandability-index"
documentation = "https://github.com/machinelearningZH/zix_understandability-index"
issues = "https://github.com/machinelearningZH/zix_understandability-index/issues"
source = "https://github.com/machinelearningZH/zix_understandability-index"
